# unittest-ft

./: CHANGELOG.md  CONTRIBUTING.md  README.md  makefile  pyproject.toml
.github/: issue_template.md
.github/workflows/: ci.yml
unittest_ft/: __init__.py  __main__.py  __version__.py  cli.py  core.py
unittest_ft/tests/: __init__.py  __main__.py  smoke.py
