[build-system]
requires = ["flit_core >=3.6,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "unittest-ft"
readme = "README.md"
authors = [
    {name="Amethyst Reese", email="amethyst@n7.gg"},
]
license = {file="LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "click >= 8",
    "rich >= 13",
    "typing-extensions >= 4.8.0",
]

[project.optional-dependencies]
dev = [
    "attribution>=1.8",
    "black==24.8.0",
    "build>=1.2",
    "flake8==7.1.1",
    "mypy==1.12.0",
    "ufmt==2.7.3",
    "usort==1.0.8.post1",
]

[project.scripts]
unittest-ft = "unittest_ft.__main__:main"

[project.urls]
Home = "https://github.com/amyreese/unittest-ft"

[tool.flit.sdist]
exclude = [
    ".github/",
]

[tool.attribution]
name = "unittest-ft"
package = "unittest_ft"
version_file = true
ignored_authors = ["dependabot[bot]"]
signed_tags = true

[tool.mypy]
strict = true
